# readii-negative-controls

./: .gitignore  README.md  Snakefile  imgtools.toml  imgtools.yaml  pixi.toml  pyproject.toml
config/pyrad_settings/: uhn-radcure-challenge_plus_aerts_params.yaml
src/readii_negative_controls/: data.py  log.py  logging.py  settings.py  vizualize.py  writer.py
src/readii_negative_controls/utils/: __init__.py  bbox.py  rtstruct.py
workflow/envs/: fmcib.yaml
workflow/notebooks/: post_analysis.py.ipynb
workflow/scripts/: download-series.py  find-series.py  generate_cropped_niftis.py  generate_mask_image_nifti.py  generate_negative_controls.py  generate_niftis.py  index_and_filter_dicoms.py  run_fmcib.py  unzip_dirs.py
