[project]
authors = [{name = "Jermiah", email = "jermiahjoseph98@gmail.com"}]
dependencies = [
  "pydantic-settings",
  # "readii"
]
description = "Add a short description here"
name = "readii-negative-controls"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
readii_negative_controls = { path = ".", editable = true }

# [tool.pixi.feature.base.pypi-dependencies]
# project-lighter = { version = "==0.0.2a19" }
# foundation-cancer-image-biomarker = { version = "==1.0.0" }